Bug 74610 Removed overflow:hidden so shadows on dropdowns are visible
http://bugzilla.zimbra.com/show_bug.cgi?id=74610

Copied from Perforce
 Change: 372455

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -1913,7 +1913,7 @@ input.xform_field {
  *
  ***************/
 
-.ZSelectAutoSizingContainer 		{ overflow:hidden; height:22px; width:auto; }		/* TODO: SIZE ASSUMPTION! */
+.ZSelectAutoSizingContainer					{	height:22px; width:auto;				}		/* TODO: SIZE ASSUMPTION! */
 
 .ZSelect									{	@Select@		@SelectSpacing@			}
 .ZSelect .ZWidgetTitle						{	padding-left:5px; text-align:left;		}
